# sovereign

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
docs/: INTEGRATION.md  SDK.md
programs/sovereign/: Cargo.toml
programs/sovereign/src/: errors.rs  lib.rs  state.rs
programs/sovereign/src/instructions/: create_identity.rs  mod.rs  set_authority.rs  update_civic.rs  update_creator.rs  update_developer.rs  update_infra.rs  update_trading.rs
programs/sovereign/src/instructions/admission_market/: claim_winnings.rs  create_market.rs  mod.rs  take_position.rs
programs/sovereign/src/instructions/creator_dao/: add_founder_member.rs  cast_vote.rs  create_dao.rs  mod.rs  nominate_creator.rs  resolve_nomination.rs
programs/sovereign/src/state/: admission_market.rs  creator_dao.rs  mod.rs
scripts/: create-identity-devnet.ts  test-komon-sync.ts  test-umbra-read.ts  verify-devnet.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  pda.ts  types.ts
tests/: sovereign.ts
