[package]
name = "sovereign"
version = "0.1.0"
description = "Universal identity and multi-dimensional reputation protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sovereign"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
